--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE-edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>AniData</title>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:regular" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500" rel="stylesheet" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
 			rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Space+Mono:regular,700" rel="stylesheet" />
 	</head>
 	<body>
 		<div class="wrapper"></div>
